welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:9: error: not enough arguments for method faireFleur: (c: java.awt.Color)Unit.
Unspecified value parameter c.
	faireFleur();
                  ^