welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.code
def faireFleur(c:Color) {
	setCouleurBrosse(c);baisseBrosse();leveBrosse();droite();avance();gauche();avance();baisseBrosse();
	leveBrosse();avance();gauche();avance();baisseBrosse();leveBrosse();avance();gauche();avance();
	baisseBrosse();leveBrosse();avance();gauche();avance();
}

def growFlowers() {
	faireFleur();
}
growFlowers()